createNameSpace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: commerce-services
spec:
  finalizers:
  - kubernetes
