configMapDemo1.yml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod1
  labels:
    app: chat-server
    author: krishna
    serviceType: desktop
spec:
  containers:
    - name: chat-server
      image: busybox
      command: ["/bin/sh", "-c", "env"]
