envtVariables.yml
apiVersion: v1
kind: Pod
metadata:
  name: read-env-variables-pod
  labels:
    app: hello-world
    author: krishna
    serviceType: terminal-app
spec:
  containers:
    - name: execute-command-container
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo \"Hi, $AUTHOR , about you : $ABOUT_ME\"; sleep 5; done"]
