helloWorldTerminalApp.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: hello-world
    author: krishna
    serviceType: terminal-app
spec:
  containers:
    - name: hello-world
      image: busybox
      command:
        - sleep 
        - "30"
