initContainerDemo.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-example-demo
  labels:
    app: hello-world
    author: krishna
    serviceType: user-service
spec:
  containers:
    - name: user-service
      image: jboss/wildfly
