nameSpaceDemoPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: employee-service
  labels:
    app: employee-service
    author: krishna
    serviceType: webservice
  namespace: data-platform
spec:
  containers:
    - name: employee-service-container
      image: jboss/wildfly
