podVolumesDemo.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: hello-world
    author: krishna
    serviceType: user-service
spec:
  containers:
    - name: container1
      image: busybox
      command:
        - sleep 
        - "300"
      volumeMounts:
        - mountPath: /container1-mount
          name: my-volume
    - name: container2
      image: busybox
      command:
        - sleep
        - "300"
      volumeMounts:
        - mountPath: /container2-mount
          name: my-volume
  volumes:
  - name: my-volume
    emptyDir: {}
