podWithNodeSelector.yml
apiVersion: v1
kind: Pod
metadata:
  name: employee-web-service
  labels:
    app: employee-service
    author: krishna
    serviceType: webservice
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: employee-service-container
      image: jboss/wildfly
