ingressDemo.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: emp-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
     empservice.example.com
    http:
      paths:
      - path: /emp-service
        pathType: Prefix
        backend:
          serviceName: employee-service-deployment
          servicePort: 8080
